# salah

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  schedule.rs
src/astronomy/: ops.rs  qiblah.rs  solar.rs  unit.rs
src/models/: adjustments.rs  event.rs  high_altitude_rule.rs  madhab.rs  method.rs  mod.rs  parameters.rs  prayer.rs  rounding.rs  shafaq.rs
