[package]
name = "salah"
version = "0.9.0"
authors = ["Farhan Ahmed <farhan@themacronaut.com>"]
edition = "2018"
description = "Islamic prayer time library for Rust"
documentation = "https://docs.rs/salah/"
homepage = "https://github.com/insha/salah"
repository = "https://github.com/insha/salah"
readme = "README.md"
keywords = ["salah", "pray", "islam", "reminder", "adhan"]
categories = ["date-and-time", "islam"]
license = "MIT"

[dev-dependencies]
float-cmp = "0.10.0"
rstest = "0.23.0"
spectral = "0.6.0"

[dependencies]
chrono = "0.4.38"
derive_builder = "0.20.2"
serde = { version = "1.0.215", features = ["derive"] }
tabled = "0.16.0"
